adding content to html file

--- a/index.html
+++ b/index.html
@@ -8,14 +8,30 @@
     <title>Cafecito | Home</title>
 </head>
 <body>
-    <header></header>
-    <nav></nav>
+    <header>
+      <h1>Bienvenido a Cafecito</h1>
+    </header>
+
+    <nav>
+      <a href="#">Inicio</a>
+      <a href="#">Acerca de</a>
+      <a href="#">Contacto</a>
+    </nav>
+
     <main>
         <section>
-            <article></article>
+            <article>
+              <h2>Título del artículo</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias unde sed adipisci eveniet, maxime ipsam, officia nemo aliquam nulla nihil dignissimos illo. Suscipit explicabo, quis placeat eos provident magni aliquid?</p>
+            </article>
         </section>
     </main>
-    <aside></aside>
-    <footer></footer>
+    <aside>
+      <h3>Información adicional</h3>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam, provident. Assumenda esse nisi vitae consequuntur expedita deleniti exercitationem, blanditiis tenetur quas amet obcaecati molestiae officiis. Repudiandae aliquid odit vitae expedita.</p>
+    </aside>
+    <footer>
+      &copy; 2023 Landing page de Cafecito. Todos los derechos reservados.
+    </footer>
 </body>
 </html>
