Images for landing page done

--- a/index.html
+++ b/index.html
@@ -25,13 +25,24 @@
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias unde sed adipisci eveniet, maxime ipsam, officia nemo aliquam nulla nihil dignissimos illo. Suscipit explicabo, quis placeat eos provident magni aliquid?</p>
             </article>
         </section>
+
+        <!-- Slideshow container to display coffee technique pictures -->
+        <div class="slideshow-container">
+          <img src="images/coffee1.jpg" alt="Coffee Technique 1">
+          <img src="images/coffee2.jpg" alt="Coffee Technique 2">
+          <img src="images/coffee3.jpg" alt="Coffee Technique 3">
+          <!-- Add more image sources for other coffee techniques -->
+      </div>
     </main>
     <aside>
       <h3>Información adicional</h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam, provident. Assumenda esse nisi vitae consequuntur expedita deleniti exercitationem, blanditiis tenetur quas amet obcaecati molestiae officiis. Repudiandae aliquid odit vitae expedita.</p>
+      <p>Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Nam, provident. Assumenda esse nisi vitae consequuntur expedita deleniti exercitationem, blanditiis tenetur quas amet obcaecati molestiae officiis. Repudiandae aliquid odit vitae expedita.</p>
     </aside>
     <footer>
       &copy; 2023 Landing page de Cafecito. Todos los derechos reservados.
     </footer>
+
+    <script src="script.js
+    "></script>
 </body>
 </html>
