Changes of Ema Torres

--- a/index.html
+++ b/index.html
@@ -26,18 +26,23 @@
             </article>
         </section>
 
-        <!-- Slideshow container to display coffee technique pictures -->
-        <div class="slideshow-container">
-          <img src="images/coffee1.jpg" alt="Coffee Technique 1">
-          <img src="images/coffee2.jpg" alt="Coffee Technique 2">
-          <img src="images/coffee3.jpg" alt="Coffee Technique 3">
-          <!-- Add more image sources for other coffee techniques -->
-      </div>
+        <section class="images-section">
+          <!-- Slideshow container to display coffee technique pictures -->
+          <div class="slideshow-container">
+            <img src="images/coffee1.jpg" alt="Coffee Technique 1">
+            <img src="images/coffee2.jpg" alt="Coffee Technique 2">
+            <img src="images/coffee3.jpg" alt="Coffee Technique 3">
+            <!-- Add more image sources for other coffee techniques -->
+          </div>
+
+          <aside>
+            <h3>Descripción del Café</h3>
+            <p>Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Nam, provident. Assumenda esse nisi vitae consequuntur expedita deleniti exercitationem, blanditiis tenetur quas amet obcaecati molestiae officiis. Repudiandae aliquid odit vitae expedita.</p>
+          </aside>
+
+        </section>
     </main>
-    <aside>
-      <h3>Información adicional</h3>
-      <p>Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Nam, provident. Assumenda esse nisi vitae consequuntur expedita deleniti exercitationem, blanditiis tenetur quas amet obcaecati molestiae officiis. Repudiandae aliquid odit vitae expedita.</p>
-    </aside>
+
     <footer>
       &copy; 2023 Landing page de Cafecito. Todos los derechos reservados.
     </footer>
