--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
 
           <aside>
             <h3>Descripción del Café</h3>
-            <p>Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Nam, provident. Assumenda esse nisi vitae consequuntur expedita deleniti exercitationem, blanditiis tenetur quas amet obcaecati molestiae officiis. Repudiandae aliquid odit vitae expedita.</p>
+            <p>Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Nam, provident. Assumenda esse nisi vitae consequuntur expedita deleniti exercitationem, blanditiis tenetur quas amet obcaecati molestiae officiis. Repudiandae aliquid odit vitae expedita.
+              Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Nam, provident. Assumenda esse nisi vitae consequuntur expedita deleniti exercitationem, blanditiis tenetur quas amet obcaecati molestiae officiis. Repudiandae aliquid odit vitae expedita.
+              Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Nam, provident. Assumenda esse nisi vitae consequuntur expedita deleniti exercitationem, blanditiis tenetur quas amet obcaecati molestiae officiis. Repudiandae aliquid odit vitae expedita.
+              Lorem ipsum, dolor, sit amet consectetur adipisicing elit. Nam, provident. Assumenda esse nisi vitae consequuntur expedita deleniti exercitationem, blanditiis tenetur quas amet obcaecati molestiae officiis. Repudiandae aliquid odit vitae expedita.
+            </p>
           </aside>
 
         </section>
